feat: document visual and parser view
